--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sqlite",
   "version": "1.0.0",
-  "description": "",
+  "description": "A fullstack todo application that uses NodeJS backend, SQLite database, and JWT authentication",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
