--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A fullstack todo application that uses NodeJS backend, SQLite database, and JWT authentication",
   "main": "index.js",
   "scripts": {
+    "dev": "node --watch --env-file=.env --experimental-strip-types --experimental-sqlite ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
